ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts.stderr
error: Expected ], got ,
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:20
  |
4 |         [p2: string, p3: number];
  |                    ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:14
  |
4 |         [p2: string, p3: number];
  |              ^^^^^^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:24
  |
4 |         [p2: string, p3: number];
  |                        ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:14
  |
4 |         [p2: string, p3: number];
  |              ^^^^^^^^^^

error[1128]: Declaration or statement expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:24
  |
4 |         [p2: string, p3: number];
  |                        ^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:32
  |
4 |         [p2: string, p3: number];
  |                                ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:26
  |
4 |         [p2: string, p3: number];
  |                          ^^^^^^

error[1128]: Declaration or statement expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:4:32
  |
4 |         [p2: string, p3: number];
  |                                ^

error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature11/input.ts:5:1
  |
5 | }
  | ^

